--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "typescript": "^5.4.5"
+    "mongoose": "^8.4.3",
+    "typescript": "^5.4.5",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@tsconfig/node16": "^16.1.3",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.14.5",
+    "@types/uuid": "^9.0.8",
     "nodemon": "^3.1.3",
     "ts-node": "^10.9.2"
   }
